<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_accessibility">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_high_contrast"
            android:summary="@string/pref_high_contrast_summary"
            android:title="@string/pref_high_contrast_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_large_keys"
            android:summary="@string/pref_large_keys_summary"
            android:title="@string/pref_large_keys_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_talkback"
            android:summary="@string/pref_talkback_summary"
            android:title="@string/pref_talkback_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_voice_offline"
            android:summary="@string/pref_voice_offline_summary"
            android:title="@string/pref_voice_offline_title" />
    </PreferenceCategory>
</PreferenceScreen>
